tests/fail_cases/unexpected_tokens_between_match_and_of.rs
extern crate mquote;

use mquote::mquote;

fn main() {
    let _ = mquote!(
        #{match Some("1")} unexpected stuff
            #{of Some(x)}
                #{x}
            #{of None}
                "default value"
        #{endmatch}
    );
}
